--- a/Quanlicaan/Quanlicaan/Views/Login/Index.cshtml
+++ b/Quanlicaan/Quanlicaan/Views/Login/Index.cshtml
@@ -41,7 +41,7 @@
                     </div>
 
                     <div class="container-login100-form-btn">
-                        <button class="login100-form-btn">
+                        <button class="login100-form-btn" >
                             Đăng nhập
                         </button>
                     </div>
@@ -60,6 +60,11 @@
                             Đăng kí tài khoản
                             <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
                         </a>
+                        <a class="txt2" href="@Url.Action("Index","Home")">
+                            vô trang chủ
+                            <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
+                        </a>
+
                     </div>
                 </form>
             </div>
