--- a/Quanlicaan/Quanlicaan/Views/Baocao/Baocaocanhan.cshtml
+++ b/Quanlicaan/Quanlicaan/Views/Baocao/Baocaocanhan.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Baocaocanhan";
+    ViewBag.Title = "Thống kê cá nhân";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
