--- a/Quanlicaan/Quanlicaan/Views/Baocao/baocaotheongay.cshtml
+++ b/Quanlicaan/Quanlicaan/Views/Baocao/baocaotheongay.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "baocaotheongay";
+    ViewBag.Title = "Thống kê theo ngày";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
