--- a/Quanlicaan/Quanlicaan/Views/Baocao/baocaotheothang.cshtml
+++ b/Quanlicaan/Quanlicaan/Views/Baocao/baocaotheothang.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "baocaotheothang";
+    ViewBag.Title = "Thống kê theo tháng";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
