--- a/Quanlicaan/Quanlicaan/Views/Dangkycaan/dangkyancanhan.cshtml
+++ b/Quanlicaan/Quanlicaan/Views/Dangkycaan/dangkyancanhan.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "dangkyantheonhom";
+    ViewBag.Title = "Đăng ký ăn cá nhân";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -10,10 +10,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đăng ký suất ăn theo nhóm</title>
-    <link href="~/css/dangkyannhom.css" rel="stylesheet" />
+    <title>Đăng ký suất ăn cá nhân</title>
+    <link href="~/css/dangkyancanhan.css" rel="stylesheet" />
     
-
 </head>
 <body>
     <h1>ĐĂNG KÝ CA ĂN</h1>
@@ -24,53 +23,26 @@
             <input type="text" name="name" disabled> <br>
 
             <label for="phongban">PHÒNG BAN: </label>
-            <input type="text" name="phongban" disabled> <br>
+            <input type="text" name="phongba" disabled> <br>
 
             <label for="date ">NGÀY ĐĂNG KÝ: </label>
             <input type="datetime-local" name="date" disabled>
         </b>
-
-
     </div>
-    <h2>Thông tin nhóm ăn:</h2>
-
-
     <div class="dkcaan">
-
-        <label for="name">Họ và tên:</label>
-        <input type="text" id="name" name="name">
-
-        <label for="iduser">ID: </label>
-        <input type="text" id="iduser" name="iduser">
-
-
-
         <label for="ca1">CA 1: </label>
         <input type="checkbox" style="color: darkgray;" name="ca1" class="caan">
         <input type="number" id="slsuatan" value="1" disabled>
-
+        <br>
 
         <label for="ca2">CA 2: </label>
         <input type="checkbox" style="color: darkgray;" name="ca2" class="caan">
-        <input type="number" id="slsuatan" value="1" disabled>
+        <input type="number" id="slsuatan" value="1" disabled><br>
 
         <label for="ca3">CA 3: </label>
         <input type="checkbox" style="color: darkgray;" name="ca3" class="caan">
-        <input type="number" id="slsuatan" value="1" disabled>
-
-
-
-
-
-
-
-
+        <input type="number" id="slsuatan" value="1" disabled><br>
     </div>
-
-
-
-
-
     <div class="buttoncontainer">
         <button id="btnCancel">Cancel</button>
         <button type="submit" id="btnOk">OK</button>
