--- a/Quanlicaan/Quanlicaan/Views/Shared/_Layout.cshtml
+++ b/Quanlicaan/Quanlicaan/Views/Shared/_Layout.cshtml
@@ -14,12 +14,12 @@
 </head>
 
 <body>
-
+    
     <section class="clearfix header bg-danger">
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Quản lý ăn ca</a>
+                    <a class="navbar-brand" href="@Url.Action("Index","Home")">Quản lý ăn ca</a>
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -40,8 +40,8 @@
                                     Đăng ký ca ăn
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="@Url.Action("Index","Dangkycanhan")">Cá nhân</a></li>
-                                    <li><a class="dropdown-item" href="@Url.Action("Index","Dangkytheonhom")">Tập thể</a></li>
+                                    <li><a class="dropdown-item" href="@Url.Action("Canhan","Dangkycaan")">Cá nhân</a></li>
+                                    <li><a class="dropdown-item" href="@Url.Action("Tapthe","Dangkycaan")">Tập thể</a></li>
 
                                 </ul>
                             </li>
