--- a/Quanlicaan/Views/Login/Index.cshtml
+++ b/Quanlicaan/Views/Login/Index.cshtml
@@ -50,19 +50,11 @@
                         </button>
                     </div>
 
-                    <div class="text-center-p-t-12">
-                        <span class="txt1">
-                            Quên
-                        </span>
-                        <a class="txt2" href="#">
-                            Tên người dùng / Mật khẩu?
-                        </a>
-                    </div>
-
                     <div class="text-center-p-t-136">
                         <a class="txt2" href="#">
-                            Đăng kí tài khoản
                             <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
+
+                            @Html.ActionLink("Đăng kí tài khoản", "Create", "Regist") 
                         </a>
                     </div>
                 }
