--- a/Quanlicaan/Views/Regist/Create.cshtml
+++ b/Quanlicaan/Views/Regist/Create.cshtml
@@ -70,8 +70,9 @@
                                 new SelectListItem {Text = "pb002", Value = "pb002"},
                                 new SelectListItem {Text = "pb003", Value = "pb003"},
                                 new SelectListItem {Text = "pb004", Value = "pb004"},
-                                new SelectListItem {Text = "pb005", Value = "pb005"}
-                            }, htmlAttributes: new { @class = "form-control" })
+                                new SelectListItem {Text = "pb005", Value = "pb005"},
+                                new SelectListItem {Text = "pb005", Value = "pb005"},
+                            }, htmlAttributes: new { @class = "form-control" });
                         @Html.ValidationMessageFor(model => model.idphongban, "", new { @class = "text-danger" })
                         <span class="focus-input"></span>
                         <span class="symbol-input">
