--- a/Quanlicaan/Views/Login/Index.cshtml
+++ b/Quanlicaan/Views/Login/Index.cshtml
@@ -60,10 +60,9 @@
                     </div>
 
                     <div class="text-center-p-t-136">
-                        <a class="txt2" href="#">
-                            Đăng kí tài khoản
-                            <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
-                        </a>
+                        <span>@Html.ActionLink("Đăng kí tài khoản", "Create", "Regist")</span>
+                        <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
+
                     </div>
                 }
                 
