--- a/Quanlicaan/Views/Regist/Create.cshtml
+++ b/Quanlicaan/Views/Regist/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@model Models.Framework.tblNguoiDung
-
+﻿@model Models.Framework.NhanVien
 @{
     Layout = null;
 }
@@ -19,14 +18,14 @@
                 @using (Html.BeginForm(new { @class = "regist-form validate-form" }))
                 {
                     @Html.AntiForgeryToken()
-                    <span class="regist-form-title">
-                        Đăng kí thông tin người dùng
-                    </span>
+                    <h1 class="regist-form-title">
+                        Đăng kí thông tin Nhân Viên
+                    </h1>
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
                     <div class="wrap-input validate-input" data-validate="User's id is required">
-                        @Html.TextBoxFor(model => model.id, new { @class = "input", @type = "text", @name = "id", @placeholder = "Mã nhân viên", htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.id, "", new { @class = "text-danger" })
+                        @Html.TextBoxFor(model => model.ID, new { @class = "input", @type = "text", @name = "id", @placeholder = "Mã nhân viên", htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.ID, "", new { @class = "text-danger" })
                         <span class="focus-input"></span>
                         <span class="symbol-input">
                             <i class="fa fa-envelope" aria-hidden="true"></i>
@@ -34,8 +33,39 @@
                     </div>
 
                     <div class="wrap-input validate-input" data-validate="User's fullname is required">
-                        @Html.TextBoxFor(model => model.hoten, new { @class = "input", @type = "text", @name = "fullname", @placeholder = "Họ tên nhân viên", htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.hoten, "", new { @class = "text-danger" })
+                        @Html.TextBoxFor(model => model.HoTen, new { @class = "input", @type = "text", @name = "HoTen", @placeholder = "Họ tên nhân viên", htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.HoTen, "", new { @class = "text-danger" })
+                        <span class="focus-input"></span>
+                        <span class="symbol-input">
+                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                        </span>
+                    </div>
+
+                    <div class="select-department" data-validate="Registration is required">
+                        @Html.DropDownList("Giới Tính", new List<SelectListItem>
+                            {
+                                new SelectListItem {Text = "Nam", Value = "true"},
+                                new SelectListItem {Text = "Nữ", Value = "false"},
+                            }, htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.GioiTinh, "", new { @class = "text-danger" })
+                        <span class="focus-input"></span>
+                        <span class="symbol-input">
+                            <i class="fa fa-lock" aria-hidden="true"></i>
+                        </span>
+                    </div>
+
+                    <div class="wrap-input validate-input" data-validate="User's fullname is required">
+                        @Html.TextBoxFor(model => model.DiaChi, new { @class = "input", @type = "text", @name = "DiaChi", @placeholder = "Địa Chỉ", htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.DiaChi, "", new { @class = "text-danger" })
+                        <span class="focus-input"></span>
+                        <span class="symbol-input">
+                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                        </span>
+                    </div>
+
+                    <div class="wrap-input validate-input" data-validate="User's fullname is required">
+                        @Html.TextBoxFor(model => model.SDT, new { @class = "input", @type = "text", @name = "SDT", @placeholder = "SDT", htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.SDT, "", new { @class = "text-danger" })
                         <span class="focus-input"></span>
                         <span class="symbol-input">
                             <i class="fa fa-envelope" aria-hidden="true"></i>
@@ -52,8 +82,8 @@
                     </div>
 
                     <div class="wrap-input validate-input" data-validate="Password is required">
-                        @Html.TextBoxFor(model => model.password, new { @class = "input", @type = "password", @name = "pass", @placeholder = "Mật khẩu", htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
+                        @Html.TextBoxFor(model => model.upassword, new { @class = "input", @type = "password", @name = "pass", @placeholder = "Mật khẩu", htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.upassword, "", new { @class = "text-danger" })
                         <span class="focus-input"></span>
                         <span class="symbol-input">
                             <i class="fa fa-lock" aria-hidden="true"></i>
@@ -66,19 +96,20 @@
                         @*@Html.LabelFor(model => model.idphongban, "Mã phòng ban", htmlAttributes: new { @class = "container-checkbox" })*@
                         @Html.DropDownList("idphongban", new List<SelectListItem>
                             {
-                                new SelectListItem {Text = "pb001", Value = "pb001"},
-                                new SelectListItem {Text = "pb002", Value = "pb002"},
-                                new SelectListItem {Text = "pb003", Value = "pb003"},
-                                new SelectListItem {Text = "pb004", Value = "pb004"},
-                                new SelectListItem {Text = "pb005", Value = "pb005"}
+                                new SelectListItem {Text = "Nhân Sự", Value = "pb001"},
+                                new SelectListItem {Text = "Kế Toán", Value = "pb002"},
+                                new SelectListItem {Text = "Kinh Doanh", Value = "pb003"},
+                                new SelectListItem {Text = "Quản Lí", Value = "pb004"},
+                                new SelectListItem {Text = "Bảo vệ", Value = "pb005"},
+                                new SelectListItem {Text = "Kĩ Thuật", Value = "pb006"}
                             }, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.idphongban, "", new { @class = "text-danger" })
+                        @Html.ValidationMessageFor(model => model.IDPhongBan, "", new { @class = "text-danger" })
                         <span class="focus-input"></span>
                         <span class="symbol-input">
                             <i class="fa fa-lock" aria-hidden="true"></i>
                         </span>
                     </div>
-
+                    /*
                     <p>Quyền đăng kí</p>
 
                     <div class="select-department" data-validate="Registration is required">
@@ -94,16 +125,16 @@
                             <i class="fa fa-lock" aria-hidden="true"></i>
                         </span>
                     </div>
-
+                    */
                     <p>Phân quyền</p>
 
                     <div class="select-department" data-validate="Registration is required">
-                        @Html.DropDownList("idchucvu", new List<SelectListItem>
+                        @Html.DropDownList("ChucVu", new List<SelectListItem>
                             {
-                                new SelectListItem {Text = "User", Value = "cv001"},
-                                new SelectListItem {Text = "Admin", Value = "cv002"},
+                                new SelectListItem {Text = "NhanVien", Value = "Nhan vien"},
+                                new SelectListItem {Text = "Admin", Value = "admin"},
                             }, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.idchucvu, "", new { @class = "text-danger" })
+                        @Html.ValidationMessageFor(model => model.ChucVu, "", new { @class = "text-danger" })
                         <span class="focus-input"></span>
                         <span class="symbol-input">
                             <i class="fa fa-lock" aria-hidden="true"></i>
@@ -127,7 +158,7 @@
                     </div>
 
                     <div class="container-login-form-btn">
-                        <button class="login-form-btn">
+                        <button class="login-form-btn" type="submit">
                             Đăng kí
                         </button>
                     </div>
