--- a/Quanlicaan/Views/Shared/_Layout.cshtml
+++ b/Quanlicaan/Views/Shared/_Layout.cshtml
@@ -3,40 +3,84 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
-</head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
+    <title>@ViewBag.Title </title>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+
+    <link href="~/css/layout.css" rel="stylesheet" />
+    <script src="~/Scripts/bootstrap.bundle.min.js"></script>
+
+    @RenderSection("head", required: false)
+</head>
+
+<body>
+
+    <section class="clearfix header bg-danger">
+        <div class="container-fluid">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="@Url.Action("Index","Home")">Quản lý ăn ca</a>
+
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Quản lý
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="#">Giao diện</a></li>
+                                    <li><a class="dropdown-item" href="@Url.Action("Index","NhanVien")">Nhan viên</a></li>
+                                    <li><a class="dropdown-item" href="#">Phòng ban</a></li>
+
+
+                                </ul>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Đăng ký ca ăn
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="@Url.Action("Canhan","Dkicaan")">Cá nhân</a></li>
+                                    <li><a class="dropdown-item" href="@Url.Action("Tapthe","Dkicaan")">Tập thể</a></li>
+
+                                </ul>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Thống kê
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="@Url.Action("Canhan","Baocao")">Cá nhân</a></li>
+                                    <li><a class="dropdown-item" href="@Url.Action("Theongay","Baocao")">Theo ngày</a></li>
+                                    <li><a class="dropdown-item" href="@Url.Action("Theothang","Baocao")">Theo Tháng</a></li>
+
+                                </ul>
+                            </li>
+
+                        </ul>
+                        <form class="nav-item dropdown">
+                            <li class="nav-item">
+                                <a class="nav-dangxuat" href="@Url.Action("Index","Login")">Đăng xuất</a>
+                            </li>
+                        </form>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </section>
+    <section class="clearfix-maincontent py-1">
+        <div class="container-fluid">
+            @RenderBody()
+        </div>
+    </section>
+    <section class="clearfix-footer bg-gradient">
+        <div class="container-fluid text-black-50 text-center">
+            <p> Created by St </p>
+        </div>
+    </section>
+
+
+    @RenderSection("footer", required: false)
 </body>
+
 </html>
