--- a/Quanlicaan/Quanlicaan/Views/Login/Index.cshtml
+++ b/Quanlicaan/Quanlicaan/Views/Login/Index.cshtml
@@ -41,8 +41,9 @@
                     </div>
 
                     <div class="container-login100-form-btn">
-                        <button class="login100-form-btn" >
+                        <button class="login100-form-btn" href="@Url.Action("Index","Home")" >
                             Đăng nhập
+
                         </button>
                     </div>
 
@@ -55,17 +56,13 @@
                         </a>
                     </div>
 
+                    <br />
                     <div class="text-center-p-t-136">
                         <a class="txt2" href="@Url.Action("Index","Regist")">
-                            Đăng kí tài khoản
-                            <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
+                            Đăng ký
                         </a>
 
-                        <br>
-                        <a class="txt2" href="@Url.Action("Index","Home")">
-                            vô trang chủ
-                            <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
-                        </a>
+                     
 
                     </div>
                 </form>
