--- a/Quanlicaan/Quanlicaan/Views/Login/Index.cshtml
+++ b/Quanlicaan/Quanlicaan/Views/Login/Index.cshtml
@@ -2,6 +2,7 @@
 @{
     Layout = null;
 }
+@model Quanlicaan.NhanVien
 
 <!DOCTYPE html>
 <html>
@@ -18,14 +19,16 @@
                 <div class="login100-pic js-tilt" data-tilt>
                     <img src="~/images/img-01.png" alt="IMG">
                 </div>
-
-                <form class="login100-form validate-form">
+                @using (Html.BeginForm(new { @class = "login100-form validate-form" }))
+                {
+                    @Html.AntiForgeryToken()
+                    @Html.ValidationSummary(true, null, new { @class = "alert alert-danger" })
                     <span class="login100-form-title">
                         Đăng nhập tài khoản
                     </span>
 
                     <div class="wrap-input100 validate-input" data-validate="Username is required">
-                        <input class="input100" type="text" name="username" placeholder="Tên đăng nhập">
+                        @Html.TextBoxFor(model => model.username, new { @class = "input100", @type = "text", @name = "username", @placeholder = "Tên đăng nhập" })
                         <span class="focus-input100"></span>
                         <span class="symbol-input100">
                             <i class="fa fa-envelope" aria-hidden="true"></i>
@@ -33,7 +36,8 @@
                     </div>
 
                     <div class="wrap-input100 validate-input" data-validate="Password is required">
-                        <input class="input100" type="password" name="pass" placeholder="Mật khẩu">
+                        @Html.TextBoxFor(model => model.upassword, new { @class = "input100", @type = "password", @name = "pass", @placeholder = "Mật khẩu" })
+
                         <span class="focus-input100"></span>
                         <span class="symbol-input100">
                             <i class="fa fa-lock" aria-hidden="true"></i>
@@ -41,33 +45,23 @@
                     </div>
 
                     <div class="container-login100-form-btn">
-                        <button class="login100-form-btn" href="@Url.Action("Index","Home")" >
+                        <button class="login100-form-btn">
                             Đăng nhập
-
                         </button>
                     </div>
 
-                    <div class="text-center-p-t-12">
-                        <span class="txt1">
-                            Quên
-                        </span>
-                        <a class="txt2" href="#">
-                            Tên người dùng / Mật khẩu?
-                        </a>
-                    </div>
-
-                    <br />
                     <div class="text-center-p-t-136">
-                        <a class="txt2" href="@Url.Action("Index","Regist")">
-                            Đăng ký
+                        <a class="txt2" href="#">
+                            <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
+
+                            @Html.ActionLink("Đăng kí tài khoản", "Regist", "Regist")
                         </a>
-
-                     
-
                     </div>
-                </form>
+                }
+
             </div>
         </div>
+    </div>
 </body>
 
 </html>
