--- a/Quanlicaan/Quanlicaan/Views/NhanVien/Index.cshtml
+++ b/Quanlicaan/Quanlicaan/Views/NhanVien/Index.cshtml
@@ -1,56 +1,77 @@
-﻿@{ 
-    string[] Tableheaders = new string[] { "ID"
-      ,"HoTen"
-      ,"GioiTinh"
-      ,"DiaChi"
-      ,"SDT"
-      ,"IDPhongBan"
-      ,"ChucVu"
-      ,"username"
-      ,"upassword"
-      ,"trangthai"
-       };
+﻿@model IEnumerable<Quanlicaan.NhanVien>
+
+@{
+    ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    <link href="~/css/nv.css" rel="stylesheet" />
 }
 
-<div class="table">
-    <table class="table-bordered table-hover">
-        <thead>
-            <tr>
-                @{ 
-                    foreach (var head in Tableheaders)
-                    {
-                <th>
-                    @head
-                </th>
-                    }
-                }
-            </tr>
-        </thead>
-  
-        <tbody>
-            @{
-                if (Model != null)
-                {
-                    foreach (var Data in Model)
-                    {
-                        <tr>
-                            <td> @Data.ID </td>
-                            <td> @Data.HoTen </td>
-                            <td> @Data.GioiTinh </td>
-                            <td> @Data.DiaChi </td>
-                            <td> @Data.IDPhongBan </td>
-                            <td> @Data.ChucVu </td>
-                            <td> @Data.username </td>
-                            <td> @Data.upassword </td>
-                            <td> @Data.trangthai </td>
+<h2 style="text-align:center">Danh sách nhân viên</h2>
 
-                        </tr>
+<p>
+    @Html.ActionLink("Thêm mới", "Create")
+</p>
+<table class="table">
+    <tr class="header">
+        <th>ID</th>
+        <th>Họ và tên</th>
+        <th>Địa chỉ</th>
+        <th>Giới tính</th>
+        <th>Số điện thoại</th>
+        <th>Phòng ban</th>
+        <th> Chức vụ</th>
+        <th>Quyền đăng ký</th>
+        <th>Tên tài khoản</th>
+        <th>Mật khẩu</th>
+        <th>Trạng thái</th>
+        <th> </th>
+    </tr>
 
+    @foreach (var item in Model)
+    {
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.ID)
+    </td>
 
-                    }
-                }
-            }
-        </tbody>
-    </table>
+    <td>
+        @Html.DisplayFor(modelItem => item.HoTen)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.DiaChi)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.GioiTinh)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.SDT)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.PhongBan.TenPB)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.ChucVu)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.IDRole)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.username)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.upassword)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.trangthai)
+    </td>
+    <td>
+        @Html.ActionLink("Sửa", "Edit", new { id = item.ID }) |
+        @Html.ActionLink("Xoá", "Delete", new { id = item.ID })
+    </td>
+</tr>
+    }
 
-</div>
+</table>
+@*<div class="link">
+    
+</div>*@
