--- a/Quanlicaan/Quanlicaan/css/login.css
+++ b/Quanlicaan/Quanlicaan/css/login.css
@@ -220,7 +220,8 @@ iframe {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 80px 130px 33px 95px;
+    padding: 80px 120px;
+    margin:auto;
 }
 
 /*---------------------------------------------*/
