--- a/Quanlicaan/Quanlicaan/Views/NhanVien/Show.cshtml
+++ b/Quanlicaan/Quanlicaan/Views/NhanVien/Show.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Quanlicaan.NhanVien>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Danh sách nhân viên";
     Layout = "~/Views/Shared/_Layout.cshtml";
     <link href="~/css/nv.css" rel="stylesheet" />
 }
@@ -9,7 +9,7 @@
 <h2 style="text-align:center">Danh sách nhân viên</h2>
 
 <p>
-    @Html.ActionLink("Thêm mới", "Create")
+    @Html.ActionLink("Thêm mới", "AddNV")
 </p>
 <table class="table">
     <tr class="header">
@@ -65,7 +65,7 @@
         @Html.DisplayFor(modelItem => item.trangthai)
     </td>
     <td>
-        @Html.ActionLink("Sửa", "Edit", new { id = item.ID }) |
+        @Html.ActionLink("Sửa", "EditNV", new { id = item.ID }) |
         @Html.ActionLink("Xoá", "Delete", new { id = item.ID })
     </td>
 </tr>
