--- a/Quanlicaan/Quanlicaan/Views/NhanVien/Delete.cshtml
+++ b/Quanlicaan/Quanlicaan/Views/NhanVien/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Quanlicaan.NhanVien
 
 @{
-    ViewBag.Title = "View";
+    ViewBag.Title = "Xoá nhân viên";
     Layout = "~/Views/Shared/_Layout.cshtml";
     <link href="~/css/deletenv.css" rel="stylesheet" />
 }
