--- a/Quanlicaan/Quanlicaan/Views/NhanVien/AddNV.cshtml
+++ b/Quanlicaan/Quanlicaan/Views/NhanVien/AddNV.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Quanlicaan.NhanVien
 
 @{
-    ViewBag.Title = "AddNV";
+    ViewBag.Title = "Thêm mới nhân viên";
     Layout = "~/Views/Shared/_Layout.cshtml";
     <link href="~/css/addnv.css" rel="stylesheet" />
 }
@@ -64,7 +64,8 @@
            ID Phòng Ban:
             <div class="col-md-10" id="colpb">
                 @Html.EditorFor(model => model.IDPhongBan, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.IDPhongBan, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.PhongBan.TenPB, "1: Kế toán | 2: Dân sự | 3: Kỹ thuật", new { @class = "text-danger" })
+                
             </div>
         </div>
     
@@ -109,13 +110,13 @@
             Quyền đăng ký
             <div class="col-md-10" id="colrole">
                 @Html.EditorFor(model => model.IDRole, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.IDRole, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.IDRole, "1: Admin | 2: User", new { @class = "text-danger" })
             </div>
         </div>
     
 
         <div class="form-group">
-            <div class="btn-bottom">
+            <div class="btn-bottom" style="padding: 20px 12px">
                 <div class="">
                     <input type="submit" value="Tạo mới" class="btn" />
                 </div>
