--- a/Quanlicaan/Quanlicaan/Views/Shared/_Layout.cshtml
+++ b/Quanlicaan/Quanlicaan/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="@Url.Action("Index","Home")">Quản lý ăn ca</a>
+                    <a class="navbar-brand" href="@Url.Action("Home","Home")">Quản lý ăn ca</a>
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
