--- a/Quanlicaan/Quanlicaan/Views/NhanVien/AddNV.cshtml
+++ b/Quanlicaan/Quanlicaan/Views/NhanVien/AddNV.cshtml
@@ -109,8 +109,8 @@
         <div class="form-group" id="role">
             Quyền đăng ký
             <div class="col-md-10" id="colrole">
-                @Html.EditorFor(model => model.IDRole, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.IDRole, "1: Admin | 2: User", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.IDrole, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Role.URole, "1: Admin | 2: User", new { @class = "text-danger" })
             </div>
         </div>
     
