--- a/Quanlicaan/Quanlicaan/Views/NhanVien/Show.cshtml
+++ b/Quanlicaan/Quanlicaan/Views/NhanVien/Show.cshtml
@@ -53,7 +53,7 @@
         @Html.DisplayFor(modelItem => item.ChucVu)
     </td>
     <td>
-        @Html.DisplayFor(modelItem => item.IDRole)
+        @Html.DisplayFor(modelItem => item.Role.URole)
     </td>
     <td>
         @Html.DisplayFor(modelItem => item.username)
