--- a/Quanlicaan/Quanlicaan/Views/NhanVien/EditNV.cshtml
+++ b/Quanlicaan/Quanlicaan/Views/NhanVien/EditNV.cshtml
@@ -98,13 +98,13 @@
         <div class="form-group">
             Quyền đăng ký: 
             <div class="col-md-10">
-                @Html.EditorFor(model => model.IDRole, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.IDRole, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.IDrole, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Role.URole, "1: Admin | 2: User", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            <div class="btn-bottom">
+            <div class="btn-bottom" style="padding: 20px 12px">
                 <div class="">
                     <input type="submit" value="Lưu lại" class="btn" />
                 </div>
