--- a/Quanlicaan/Quanlicaan/Views/Shared/_Layout.cshtml
+++ b/Quanlicaan/Quanlicaan/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="#">Giao diện</a></li>
                                     <li><a class="dropdown-item" href="@Url.Action("Show","NhanVien")">Nhân viên</a></li>
-                                    <li><a class="dropdown-item" href="#">Phòng ban</a></li>
+                                    <li><a class="dropdown-item" href="@Url.Action("ShowAll","PhongBan")">Phòng ban</a></li>
 
 
                                 </ul>
